--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-    <link rel="stylesheet" href="css/popup.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <script src="lib/jquery.min.js"></script>
         <script src="js/helpers/localizer.js"></script>
         <script src="js/storage.js"></script>
-        <script src="js/popup.js"></script>
+        <script src="js/app.js"></script>
     </footer>
 </body>
 
